# longlink

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc.cjs  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  LICENSE  LONGLINK.md  Makefile  README.md  SECURITY.md  STYLEGUIDE.md  VIAVAI.md  compose.yml  docker-compose.yml  keycloak-realm-longlink-control-plane.json  lefthook.yml  main.py  opencode.json  package.json  pyproject.toml  renovate.json  sample.tsx
api/: .env.sample  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  REQUIREMENTS.txt  contributing.md  dec.py  main.py  pyproject.toml  seed.py  state.yaml
api/.static/: schema.xsd
api/alembic/: env.py
api/alembic/versions/: 20260219_01_add_settings_table.py  20260219_02_add_app_token_hash.py  20260220_01_add_envs_table.py  20260527_drop_compute_registry_name.py  20260604_initial_schema.py  20260608_add_location_country.py  20260608_add_operations_table.py  20260609_add_app_description.py  20260609_remove_envs_table.py  20260610_require_org_location.py  20260611_set_location_country_default_ch.py  20260612_add_operation_status_and_error.py  20260612_initial_schema.py  20260613_add_app_status.py  20260614_drop_operation_payload_add_links.py  20260615_drop_database_registry_connection_fields.py  20260616_add_operation_step.py  20260617_constrain_operation_kind.py  20260618_drop_operation_status_registry_id.py  20260619_add_app_delete_operation.py  20260620_add_org_avatar.py  20260621_rename_location_name_to_slug.py  20260622_avatar_not_null.py  20260623_app_version_labels.py  20260623_application_name_not_unique.py  20260623_compute_slug.py  20260623_database_storage_slug.py  20260623_organization_slug.py  20260624_location_provider.py  20260627_organization_invitations.py  20260629_application_runtime_registries.py  20260630_database_runtime_connection.py  20260630_operation_leases.py  20260701_local_minio_credentials.py  20260701_storage_runtime_endpoint.py  20260702_operation_scheduling.py  20260706_application_digest.py  20260707_compute_gateway_hardening.py  20260707_storage_bucket_assignments.py  20260708_organization_country.py  (+21 more)
api/pages/: overview.xml  people.xml  processes.xml  profile.xml  settings.xml  spaces.xml  tools.xml
api/src/: auth.py  config.py  constants.py  env.py  enviroments.py  environments.py  envs.py  errors.py  logger.py  organization.py  permissions.py  projections.py  settings.py  version.py
api/src/.static/: schema.xsd
api/src/adapters/: __init__.py  postgres.py
api/src/apps/: __init__.py  __root__.py  organization.py
api/src/compute/: __init__.py  __root__.py  applications.py  cluster.py  constants.py  docker.py  errors.py  gateway.py  library.py  podman.py  resources.py
api/src/database/: session.py
api/src/databases/: __init__.py  __root__.py  postgresql.py
api/src/db/: README.md  __init__.py  session.py
api/src/kubernetes/: applications.py  client.py  environments.py  gateway.py  provisioning.py  reconcile.py  resources.py
api/src/middleware/: logs.py
api/src/models/: __base__.py  __init__.py  applications.py  apps.py  auth.py  common.py  compute.py  computes.py  countries.py  database.py  databases.py  divisions.py  groups.py  icons.py  images.py  industries.py  infrastructure.py  kinds.py  locations.py  metadata.py  operations.py  organization_summary.py  organizations.py  orgs.py  pages.py  resources.py  roles.py  sections.py  settings.py  statuses.py  storage.py  storages.py  types.py  users.py
api/src/operations/: README.md  __init__.py  applications.py  compute.py  computes.py  constants.py  locations.py  organizations.py  outcomes.py  provisioning.py  registry.py  worker.py
api/src/pages/: applications.xml  examle.xml  example.xml  organizations.xml  people.xml  processes.xml  settings.xml  spaces.xml  tools.xml
api/src/routes/: __init__.py  accounts.py  applications.py  apps.py  auth.py  branding.py  common.py  compute.py  computes.py  countries.py  database.py  databases.py  example.py  health.py  icons.py  image.py  lists.py  locations.py  login.py  metadata.py  operations.py  org.py  organization.py  organizations.py  orgs.py  pages.py  people.py  proxies.py  proxy.py  sample.py  settings.py  storage.py  storages.py  user.py  users.py
api/src/runtime/: README.md  __init__.py  applications.py  bootstrap.py  cluster.py  environments.py  gateway.py  kubernetes.py  provisioning.py  registries.py  resources.py  startup.py
api/src/storage/: __init__.py  __root__.py
api/src/ui/: Tabs.py  (+15 more)
api/tests/: __init__.py  conftest.py  containers.py  factories.py  test_application_behaviors.py  test_auth.py  test_auth_access.py  test_dialog.py  test_environments.py  test_errors.py  test_hello.py  test_infrastructure_registries.py  test_mail.py  test_main.py  test_oidc_bridge_keycloak.py  test_operations.py  test_organization_behaviors.py  test_postgresql_database_adapter.py  test_projections.py  test_provisioning.py  test_seed.py  test_settings_service.py  test_version.py
org/: README.md  pyproject.toml
org/alembic/: env.py  script.py.mako
org/tenant/: __init__.py
org/tests/: __init__.py  test_migrations.py  test_models.py  test_users_service.py
sdk/: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile.sample  LICENSE  README.md  pyproject.toml
sdk/longlink/: __init__.py  __main__.py  api.py  app.py  assets.py  auth.py  constants.py  context.py  envs.py  hello.py  logger.py  metadata.py  middleware.py  organization.py  page.py  pages.py  predefined.py  router.py  settings.py  state.py  storage.py  testing.py  xml.py
sdk/sample/: .env.sample  .gitignore  AGENTS.md  README.md  main.py  metadata.json  pyproject.toml
sdk/tests/: __init__.py  conftest.py  scaffold-smoke.sh  test_app.py  test_assets.py  test_auth.py  test_database.py  test_hello.py  test_i18n_route.py  test_logger.py  test_pages.py  test_pages_route.py  test_router.py  test_runtime.py  test_storage.py  test_testing.py  test_xml_utils.py
sdk/viavai/: __init__.py  __main__.py  api.py  app.py  cli.py  constants.py  logs.py
(+2089 files in other folders)
