[build-system]
requires = ['setuptools>=69', 'setuptools_scm[toml]>=8']
build-backend = 'setuptools.build_meta'

[project]
name = 'longlink-api'
dynamic = ['version']
description = 'LongLink backend API'
readme = 'README.md'
requires-python = '>=3.14'
dependencies = [
    'aiosqlite',
    'alembic',
    'authlib',
    'email-validator',
    'fastapi==0.138.0',
    'httpx2',
    'itsdangerous',
    'aiomysql',
    'pydantic',
    'pydantic-settings',
    'psycopg[binary,pool]',
    'sqlalchemy',
    'sqlmodel',
    'starlette',
    'boto3',
    'kubernetes',
    "uvicorn<0.48.0",
]

[project.optional-dependencies]
dev = [
    'boto3-stubs[s3]==1.43.36',
    'kubernetes-stubs==22.6.0.post1',
    'mypy==1.18.2',
    'pyright==1.1.411',
    'ruff==0.14.0',
    'pytest==8.2.2',
    'pytest-asyncio==1.2.0',
    'isort==8.0.1',
    'testcontainers==4.13.2',
]

[tool.setuptools_scm]
version_scheme = 'no-guess-dev'
local_scheme = 'no-local-version'
fallback_version = '0.0.0'

[tool.setuptools]
py-modules = ['main']

[tool.setuptools.packages.find]
include = ['src*']

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["UP", "D300"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D300"]

[tool.isort]
from_first = false
no_sections = true
lines_between_types = 0
length_sort = true

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
include = ["main.py", "seed.py", "src", "alembic"]
exclude = [".venv", "build", "dist", "src/.static", "tests", "**/__pycache__"]
extraPaths = ["src", "../sdk"]

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests requiring docker/keycloak",
    "unit: marks unit tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
