[build-system]
requires = ['setuptools>=69', 'setuptools_scm[toml]>=8']
build-backend = 'setuptools.build_meta'

[project]
name = 'longlink-api'
dynamic = ['version']
description = 'LongLink backend API'
readme = 'README.md'
requires-python = '>=3.14'
dependencies = [
    'aioboto3>=15.5.0',
    'aiosqlite',
    'alembic',
    'authlib',
    'botocore',
    'email-validator',
    'fastapi==0.138.0',
    'httpx2',
    'itsdangerous',
    'aiomysql',
    'pydantic',
    'pydantic-settings',
    'psycopg[binary,pool]',
    'sqlalchemy',
    'sqlmodel',
    'starlette',
    'kubernetes',
    'tenant',
    "uvicorn<0.48.0",
]

[tool.uv.sources]
tenant = { path = "../org", editable = true }

[project.optional-dependencies]
dev = [
    'mypy==1.18.2',
    'pyright==1.1.411',
    'ruff==0.14.0',
    'pytest==8.2.2',
    'pytest-asyncio==1.2.0',
    'pytest-cov',
    'isort==8.0.1',
    'testcontainers==4.13.2',
    'types-aiobotocore[s3]==3.7.0',
]

[tool.setuptools_scm]
version_scheme = 'no-guess-dev'
local_scheme = 'no-local-version'
fallback_version = '0.0.0'

[tool.setuptools]
py-modules = ['main']

[tool.setuptools.packages.find]
include = ['src*']

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["UP", "D300"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D300"]
"src/database/models/*.py" = ["UP037", "UP045"]

[tool.isort]
from_first = false
line_length = 120
no_sections = true
lines_between_types = 0
length_sort = true

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
include = ["main.py", "seed.py", "src", "alembic"]
exclude = [".venv", "build", "dist", "src/.static", "tests", "**/__pycache__"]
# Pyright treats SQLModel descriptors as plain Python values, so keep ORM diagnostics
# out of the gate while still checking callers and non-ORM API code.
ignore = ["src/database/models", "src/database/services"]
extraPaths = ["src", "../sdk", "../org"]

[tool.pytest.ini_options]
pythonpath = [".", "../org"]
markers = [
    "integration: marks integration tests requiring docker/keycloak",
    "no_db: skips the API test database fixture for pure unit tests",
    "unit: marks unit tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
