[build-system]
requires = ['setuptools>=83.0.0', 'setuptools_scm[toml]>=10.2.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'longlink-api'
dynamic = ['version']
description = 'LongLink backend API'
readme = 'README.md'
requires-python = '>=3.14'
dependencies = [
    'aioboto3>=15.5.0',
    'aiosqlite>=0.22.1',
    'alembic>=1.18.5',
    'authlib>=1.7.2',
    'botocore>=1.40.61',
    'email-validator>=2.3.0',
    'fastapi>=0.139.0',
    'httpx2>=2.3.0',
    'itsdangerous>=2.2.0',
    'aiomysql>=0.3.2',
    'pydantic>=2.13.4',
    'pydantic-settings>=2.14.2',
    'pycountry>=26.2.16',
    'python-slugify>=8.0.4',
    'psycopg[binary,pool]>=3.3.4',
    'sqlalchemy>=2.0.51',
    'sqlmodel>=0.0.39',
    'starlette>=1.3.1',
    'kr8s>=0.20.15',
    'kubernetes>=36.0.2',
    'tenant>=0.0.0',
    'uvicorn>=0.47.0',
]

[tool.uv.sources]
tenant = { path = "../org", editable = true }

[project.optional-dependencies]
dev = [
    'mypy>=2.2.0',
    'pyright>=1.1.411',
    'ruff>=0.15.20',
    'pytest>=9.0.3',
    'pytest-asyncio>=1.4.0',
    'pytest-cov>=7.1.0',
    'docker>=7.1.0',
    'isort>=8.0.1',
    'types-aiobotocore[s3]>=3.7.0',
]

[tool.setuptools_scm]
version_scheme = 'no-guess-dev'
local_scheme = 'no-local-version'
fallback_version = '0.0.0'

[tool.setuptools]
py-modules = ['main']

[tool.setuptools.packages.find]
include = ['src*']

[tool.ruff]
line-length = 140
target-version = "py314"

[tool.ruff.lint]
select = ["UP", "D300"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D300"]
"src/database/models/*.py" = ["UP037", "UP045"]

[tool.isort]
from_first = false
line_length = 140
no_sections = true
lines_between_types = 0
length_sort = true

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
include = ["main.py", "seed.py", "src", "alembic"]
exclude = [".venv", "build", "dist", "src/.static", "tests", "**/__pycache__"]
# Pyright treats SQLModel descriptors as plain Python values, so keep ORM diagnostics
# out of the gate while still checking callers and non-ORM API code.
ignore = ["src/database/models", "src/database/services"]
extraPaths = ["src", "../sdk", "../org", "tests"]

[tool.pytest.ini_options]
pythonpath = [".", "../org"]
markers = [
    "integration: marks integration tests requiring docker/keycloak",
    "no_db: skips the API test database fixture for pure unit tests",
    "unit: marks unit tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    "src/models/divisions.py",
    "src/models/groups.py",
    "src/models/industries.py",
    "src/models/sections.py",
]
