[build-system]
requires = ["setuptools==83.0.0", "setuptools-scm[toml]==10.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "longlink"
dynamic = ["version"]
dependencies = [
    "alembic==1.18.4",
    "click==8.3.3",
    "lxml==6.1.0",
    "uvicorn==0.46.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "fsspec==2026.4.0",
    "s3fs==2026.4.0",
    "fastapi==0.138.0",
    "aiosqlite==0.22.1",
    "asyncpg==0.31.0",
    "sqlmodel==0.0.38",
    "tenant==0.0.0",
]
requires-python = ">=3.14"
authors = [
    {name = "LongLink SAGL", email = "info@longlink.ch"}
]
maintainers = []
description = "Python SDK for building and packaging LongLink applications."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE*"]
keywords = ["longlink", "sdk", "fastapi", "sqlalchemy", "pydantic", "alembic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]

[tool.uv.sources]
tenant = { path = "../org", editable = true }

[project.optional-dependencies]
cli = [
  "rich==15.0.0",
  "click==8.3.3",
]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.14.1",
    "pyright==1.1.411",
    "ruff==0.15.20",
    "lxml-stubs==0.5.1",
    "isort==8.0.1",
    "httpx2==2.3.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.14.1",
    "pyright==1.1.411",
    "ruff==0.15.20",
    "lxml-stubs==0.5.1",
    "isort==8.0.1",
    "httpx2==2.3.0",
]

[project.urls]
Homepage = "https://www.longlink.dev"
Documentation = "https://longlink.dev/docs"
Repository = "https://github.com/xLongLink/longlink.git"
"Bug Tracker" = "https://github.com/xLongLink/longlink/issues"

[tool.setuptools_scm]
root = ".."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[project.scripts]
longlink = "longlink.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["longlink*"]
exclude = ["sample*"]

[tool.setuptools.package-data]
longlink = [".static/**"]

[tool.setuptools.exclude-package-data]
longlink = [".static/new/.venv", ".static/new/.venv/*", ".static/new/.venv/**"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["UP", "D300"]

[tool.isort]
from_first = false
no_sections = true
lines_between_types = 0
length_sort = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
include = ["longlink", "tests"]
exclude = [".venv", "build", "dist", "dev", "longlink/.static", "**/__pycache__"]
extraPaths = [".", "../org"]
