[build-system]
requires = ["setuptools>=83.0.0", "setuptools-scm[toml]>=10.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "longlink"
dynamic = ["version"]
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "click>=8.4.2",
    "fastapi>=0.138.0",
    "fsspec>=2026.4.0",
    "lxml>=6.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "s3fs>=2026.4.0",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]
requires-python = ">=3.12"
authors = [
    {name = "LongLink SAGL", email = "info@longlink.ch"}
]
maintainers = []
description = "Python SDK for building and packaging LongLink applications."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
keywords = ["longlink", "sdk", "fastapi", "sqlalchemy", "pydantic", "alembic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14.1",
    "pyright>=1.1.411",
    "ruff>=0.15.20",
    "lxml-stubs>=0.5.1",
    "isort>=8.0.1",
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14.1",
    "pyright>=1.1.411",
    "ruff>=0.15.20",
    "lxml-stubs>=0.5.1",
    "isort>=8.0.1",
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
]

[project.urls]
Homepage = "https://www.longlink.dev"
Documentation = "https://longlink.dev/docs"
Repository = "https://github.com/xLongLink/longlink.git"
"Bug Tracker" = "https://github.com/xLongLink/longlink/issues"

[tool.setuptools_scm]
root = ".."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[project.scripts]
longlink = "longlink.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["longlink*"]
exclude = ["sample*"]

[tool.setuptools.package-data]
longlink = [".static/**"]
"longlink.shared" = ["alembic/*.py", "alembic/*.mako", "alembic/versions/*.py"]

[tool.setuptools.exclude-package-data]
longlink = [".static/new/.venv", ".static/new/.venv/*", ".static/new/.venv/**"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["UP", "D300"]

[tool.isort]
from_first = false
line_length = 140
no_sections = true
lines_between_types = 0
length_sort = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: marks integration tests requiring Docker"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    "longlink/__main__.py",
    "longlink/database/env.py",
    "longlink/shared/alembic/*",
]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["longlink", "tests"]
exclude = [".venv", "build", "dist", "dev", "longlink/.static", "**/__pycache__"]
extraPaths = ["."]
