[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sampleapp"
version = "0.1.0"
description = "Sample LongLink application package."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "longlink",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
