[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sampleapp"
version = "0.1.0"
description = "Sample LongLink application package."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "longlink",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "isort"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.longlink]
apptype = "tool"


[tool.isort]
from_first = false
no_sections = true
lines_between_types = 0
length_sort = true