[project]
name = "longlink-app"
version = "0.0.0"
description = "Minimal LongLink office operations application."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "longlink",
  "python-multipart",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "isort",
]

[tool.isort]
from_first = false
no_sections = true
lines_between_types = 0
length_sort = true
